--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,21 +22,18 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      
+      - uses: pnpm/action-setup@v3
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
             node-version: 20
             cache: pnpm
-            path: /path/to/pnpm
-
-
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
       - name: Install dependencies
-        run: pnpm install
-
+        run: pnpm install 
       - name: Build with VitePress
-        run: pnpm docs:build
-
+        run: pnpm docs:build 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
