--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,12 +22,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: pnpm/action-setup@v3
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
             node-version: 20
             cache: pnpm
+      - name: Setup pnpm
+        run: npm install -g pnpm@latest
+      - uses: pnpm/action-setup@v3
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Install dependencies
