--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,28 +18,25 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout main branch
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - uses: pnpm/action-setup@v3
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-            node-version: 20
-            cache: pnpm
-      - name: Setup pnpm
-        run: npm install -g pnpm@latest
-      - uses: pnpm/action-setup@v3
+          node-version: 20
+          cache: pnpm
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Install dependencies
-        run: pnpm install 
+        run: pnpm install
       - name: Build with VitePress
-        run: pnpm docs:build 
+        run: pnpm docs:build
       - name: Upload artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: vitepress-dist
           path: docs/.vitepress/dist
 
   deploy:
