--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,6 +39,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
+          name: vitepress-dist
           path: doc/.vitepress/dist
 
   deploy:
@@ -48,7 +49,7 @@ jobs:
     steps:
       - name: Checkout main branch
         uses: actions/checkout@v4
-        
+
       - name: Restore artifact
         uses: actions/download-artifact@v2
         with:
