--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -41,32 +41,42 @@ jobs:
         with:
           name: vitepress-dist
           path: doc/.vitepress/dist
-
   deploy:
-    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     needs: build
+    runs-on: ubuntu-latest
     name: Deploy
     steps:
-      - name: Checkout main branch
-        uses: actions/checkout@v4
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+#   deploy:
+#     runs-on: ubuntu-latest
+#     needs: build
+#     name: Deploy
+#     steps:
+#       - name: Checkout main branch
+#         uses: actions/checkout@v4
 
-      - name: Restore artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: vitepress-dist
-          path: doc/.vitepress/dist
+#       - name: Restore artifact
+#         uses: actions/download-artifact@v2
+#         with:
+#           name: vitepress-dist
+#           path: doc/.vitepress/dist
 
-      - name: Commit changes
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add .
-          git commit -m "Deploy VitePress site to Pages"
+#       - name: Commit changes
+#         run: |
+#           git config --local user.email "action@github.com"
+#           git config --local user.name "GitHub Action"
+#           git add .
+#           git commit -m "Deploy VitePress site to Pages"
 
-      - name: Push changes
-        uses: ad-m/github-push-action@v0.6.0
-        with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            branch: gh-pages  # Specify the branch to push changes to
+#       - name: Push changes
+#         uses: ad-m/github-push-action@v0.6.0
+#         with:
+#             github_token: ${{ secrets.GITHUB_TOKEN }}
+#             branch: gh-pages
 
 
